# ants

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  history_prompt.ipynb  pyproject.toml  start.sh
ants/: Dockerfile  __init__.py  pyproject.toml
ants/agents/: bootstrap.py  runner.py  server.py
ants/api/: __init__.py  main.py
ants/configs/: config.json
ants/protocol/: __init__.py  aip.py  send.py  status.py
ants/runtime/: __init__.py  config.py  db.py  docker_manager.py  models.py  runtime_config.py  status.py  trace_log.py  traces.py
configs/: config.json  config.yaml  runtime.yaml
configs/agents/: backend.json  backend.yaml  bizdev.yaml  creator_decider.yaml  explorer.yaml  (+3 more)
dashboard/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: aip.md  api.md  architecture.md  changelog.md  design.md  function.md  shorts.md  skills.md
nest/: Dockerfile  pyproject.toml
nest/configs/: nest.json
nest/dashboard/: Dockerfile  package-lock.json  package.json  tailwind.config.js  vite.config.ts
nest/dashboard/server/: index.cjs
nest/dashboard/src/: App.tsx  Layout.tsx  api.ts  vite-env.d.ts
nest/dashboard/src/components/: ActiveAgentsPanel.tsx  ActivityCharts.tsx  MetricCard.tsx  StatusBadge.tsx  ThemeLangSwitcher.tsx
nest/dashboard/src/components/ui/: accordion.tsx  badge.tsx  card.tsx  progress.tsx  skeleton.tsx  tabs.tsx
nest/dashboard/src/pages/: AgentDetail.tsx  CloudDrive.tsx  OrgChart.tsx  Overview.tsx  ReportsHub.tsx  TaskFlow.tsx  Traces.tsx
nest/nest/: __init__.py  api.py  config.py  db.py  registry.py
(+54 files in other folders)
