[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nest"
version = "0.1.0"
description = "Nest — Agent Management Platform: registry, observability, and AIP routing."
requires-python = ">=3.12"
dependencies = [
    "aip-protocol @ git+https://github.com/phanhom/aip.git@v1.3.0#subdirectory=sdk-python",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "httpx>=0.28",
    "pymysql>=1.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nest*"]
